--- a/src/container/task22.hbs
+++ b/src/container/task22.hbs
@@ -87,7 +87,7 @@
                             <div class="card-body">
                                 {{#with detail}}
                                 <p>{{text}}</p><br>
-                                <button class="btn btn-success">TEst button</button>
+                                <button class="btn btn-success">{{button}}</button>
                                 {{/with}}
                             </div>
                         </div>
