--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,48 +1,237 @@
-<main>
-    <h1>Hello world</h1>
-    <h2>second</h2>
-    <h3>ww12swasd</h3>
+<main class="row gy-5">
+    <div>
+        <h1>Hello world</h1>
+        <h2>second</h2>
+        <h3>ww12swasd</h3>
 
-    <hr>
+        <hr>
 
-    <div class="display-1 text-center">Hello world</div>
-    <div class="display-3 text-end">second</div>
-    <div class="display-6">ww12swasd</div>
+        <div class="display-1 text-center">Hello world</div>
+        <div class="display-3 text-end">second</div>
+        <div class="display-6">ww12swasd</div>
 
-    <hr>
-    <span class="text-muted">додатковий текст</span>
+        <hr>
+        <span class="text-muted">додатковий текст</span>
 
-    <hr>
-    <h1 class="text-uppercase">Hello world</h1>
-    <h2 class="text-lowercase">SECond</h2>
-    <h3 class="text-capitalize">ww12sss two sd</h3>
-
-
-
-    <hr>
-
-    <button class="btn btn-primary">TEst button</button>
+        <hr>
+        <h1 class="text-uppercase">Hello world</h1>
+        <h2 class="text-lowercase">SECond</h2>
+        <h3 class="text-capitalize">ww12sss two sd</h3>
 
 
-    <hr>
+
+        <hr>
+
+        <button class="btn btn-primary">TEst button</button>
 
 
-    <p class="text-primary"> my texttttt fadsdd asd ads
-
-    </p>
+        <hr>
 
 
-    <hr>
+        <p class="text-primary"> my texttttt fadsdd asd ads
 
-    <button class="btn btn-outline-primary btn-lg">My button</button>
-    <button class="btn btn-outline-primary btn-sm">My button</button>
-
-    <hr>
+        </p>
 
 
-    <div class="card">
-        <div class="card-body">
-            this is content
+        <hr>
+
+        <button class="btn btn-outline-primary btn-lg">My button</button>
+        <button class="btn btn-outline-primary btn-sm">My button</button>
+
+        <hr>
+
+
+        <div class="card">
+            <div class="card-body">
+                this is content
+            </div>
+        </div>
+        <section class="col-6">
+            <div class="card">
+                <img class="card-img-top" src="https://picsum.photos/800/600" alt="Product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Product #165445
+                    </h5>
+                    <p>This is content</p>
+                    <a href="#" class="btn btn-primary">open</a>
+                </div>
+            </div>
+        </section>
+
+
+        <br>
+        <br>
+        <br>
+
+
+
+
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Menu
+                </h5>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a href="#" class="btn btn-link">Home page</a>
+                </li>
+
+                <li class="list-group-item"><a href="#" class="btn btn-link">Summary page</a></li>
+
+                <li class="list-group-item"><a href="#" class="btn btn-link">Skills page</a></li>
+            </ul>
+            <div class="card-footer">
+                <button class="btn btn-dark btn-sm">Update list </button>
+            </div>
+        </div>
+
+
+
+        <br>
+        <br>
+        <br>
+
+
+        <table class="table  table-bordered ">
+            <thead>
+                <tr>
+                    <th>
+                        #id
+                    </th>
+                    <th>
+                        name
+                    </th>
+                    <th>
+                        age
+                    </th>
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td>Jhon</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>ivan</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Jhony</td>
+                    <td>15</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="card text-bg-success">
+            <div class="card-header text-center">Header</div>
+            <div class="card-body  text-center">
+                <h6 class="card-title">This is title</h6>
+                <p>This is contetn of our box
+                </p>
+                <button class="btn btn-light">Click!</button>
+            </div>
+            <div class="card-footer text-center">Footer</div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="row gy-1 gx-2">
+
+            <div class="col-3">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+            <div class="col-6">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+            <div class="col-3">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+            <div class="col-3">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+            <div class="col-3">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+            <div class="col-3">
+                <div class="card text-bg-success">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body  text-center">
+                        <h6 class="card-title">This is title</h6>
+                        <p>This is contetn of our box
+                        </p>
+                        <button class="btn btn-light">Click!</button>
+                    </div>
+                    <div class="card-footer text-center">Footer</div>
+
+                </div>
+
+            </div>
+
         </div>
     </div>
 </main>
