--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,6 +1,5 @@
-<footer>
-    <hr>
-    <br>
+<footer class="p-2">
+    <hr class="my-5">
     <div>
         {{#with social}}
 
@@ -10,11 +9,9 @@
 
         {{/with}}
     </div>
-    <br>
-    <div>
+    <div class="my-3">
         <em>Copyright by {{firstname}} {{lastname}}</em>
     </div>
-    <br>
     <div>
         <address>{{address}}</address>
     </div>
