--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,4 +1,4 @@
-<main class="row gy-5">
+<main class="row gy-5 p-2">
     <div>
         <h1>Hello world</h1>
         <h2>second</h2>
@@ -230,6 +230,80 @@
 
                 </div>
 
+            </div>
+
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="nav nav-tabs">
+                <div class="nav-item">
+
+                    <a href="#" class="nav-link active">Main</a>
+                </div>
+                <div class="nav-item">
+
+                    <a href="#" class="nav-link">Catalog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Shoplist</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-2">
+            <div class="card">
+                <div class="pt-4 pb-3 px-4">
+                    <div class="nav flex-column">
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link">Home page</a>
+                            </div>
+                        </div>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link active">Catalog</a>
+                            </div>
+                        </div>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link disabled">FAQ</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-10">
+            <div class="row">
+                <div class="col-12">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">PC and Notebook</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            Macbook
+                        </li>
+                    </ol>
+
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary rounded-pill m-5">Click me!</button>
+                    <div class="alert alert-warning" role="alert">
+                        <h6>Hello World! <span class="badge text-bg-warning rounded-pill text-uppercase"> Топ
+                                продаж</span>
+                        </h6>
+
+                    </div>
+
+                </div>
             </div>
 
         </div>
