--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -1,4 +1,4 @@
-<<div>
+<div class="p-2">
     {{#with main}}
     <main>
         <section>
@@ -23,4 +23,4 @@
     </main>
 
     {{/with}}
-    </div>>
+</div>
