--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -3,12 +3,12 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<div>
+<div class="p-2">
 
     {{#with main}}
 
     <main>
-        <section>
+        <section class="mb-3">
             {{> title data=summary.title big=true}}
             <div>
                 <p>
