add shopnews and componets

--- a/src/component/shopaction.hbs
+++ b/src/component/shopaction.hbs
@@ -7,7 +7,7 @@
             <p>{{description}}
             </p>
             {{#each buttons}}
-            <button href="{{link}}" class="btn btn-light">{{text}}</button>
+            <a href="{{link}}" class="btn btn-light" role="button">{{text}}</a>
             {{/each}}
         </div>
 
