--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -1,18 +1,5 @@
 <body class="p-2">
-    <div class="p-2 mt-4 col-12">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                {{#each breadcrumb}}
-
-
-                <li class="breadcrumb-item"><a {{#if url}} href="{{url}}  {{/if}}">{{name}}</a></li>
-
-
-
-                {{/each}}
-            </ol>
-        </nav>
-    </div>
+    {{> breadcrump}}
     <section class="mt-4 mb-5  ">
         {{#with productData}}
         <div class="row">
