--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -308,4 +308,135 @@
 
         </div>
     </div>
+
+
+
+
+    <br>
+    <section class="p-5">
+        <div class="row g-5">
+            <div class="col-12">
+
+                <div>
+                    <label class="form-label">Email address</label>
+                    <input class="form control">
+                    <div class="form-text text-danger"> Error. You need to set correct email
+                        address
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-12">
+                <label class="form-label">Email address</label>
+                <div class="row">
+                    <div class="col-2">
+                        <input type="color" class="form control">
+                    </div>
+                    <div class="form-text text-danger"> Error. You need to set correct email
+                        address
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-12">
+
+                <div>
+                    <label class="form-label">Select roll</label>
+                    <select class="form-select">
+                        <option selected>Open list</option>
+                        <option value="1">Admin</option>
+                        <option value="2">User</option>
+                    </select>
+                    <div class="form-text text-danger"> Error. You need to set correct email
+                        address
+                    </div>
+                </div>
+
+
+            </div>
+            <div>
+                <hr class="m-5">
+            </div>
+            <div class="col-12">
+                <div class="from-check">
+
+                    <input name="food" type="checkbox" class="form-check-input">
+                    <label class="form-check-label">apple </label>
+
+                </div>
+                <div class="from-check">
+                    <label class="form-check-label">orange </label>
+                    <input name="food" type="checkbox" class="form-check-input">
+
+                </div>
+                <div class="from-check">
+                    <label class="form-check-label">banana</label>
+                    <input name="food" type="checkbox" class="form-check-input">
+
+                </div>
+                <div class="from-check">
+                    <label class="form-check-label">Cola</label>
+                    <input name="food" type="checkbox" class="form-check-input">
+
+                </div>
+            </div>
+
+            <hr class="m-5">
+        </div>
+        <div class="col-12">
+            <div class="from-check">
+
+                <input name="food" type="radio" class="form-check-input">
+                <label class="form-check-label">apple </label>
+
+            </div>
+            <div class="from-check">
+                <label class="form-check-label">orange </label>
+                <input name="food" type="radio" class="form-check-input">
+
+            </div>
+            <div class="from-check">
+                <label class="form-check-label">banana</label>
+                <input name="food" type="radio" class="form-check-input">
+
+            </div>
+            <div class="from-check">
+                <label class="form-check-label">Cola</label>
+                <input name="food" type="radio" class="form-check-input">
+
+            </div>
+        </div>
+        <div>
+            <hr class="m-5">
+        </div>
+        <div class="col-12">
+            <div class="from-check form-switch">
+
+                <input name="food" type="checkbox" class="form-check-input">
+                <label class="form-check-label">apple </label>
+
+            </div>
+            <div class="from-check form-switch">
+                <input name="food" type="checkbox" class="form-check-input">
+                <label class="form-check-label">orange </label>
+
+
+            </div>
+            <div class="from-check form-switch">
+                <input name="food" type="checkbox" class="form-check-input">
+                <label class="form-check-label">banana</label>
+
+            </div>
+            <div class="from-check form-switch">
+                <input name="food" type="checkbox" class="form-check-input">
+                <label class="form-check-label">Cola</label>
+
+
+            </div>
+        </div>
+
+    </section>
+
 </main>
