add shopreview and component reviewItem

--- a/src/component/shopheader.hbs
+++ b/src/component/shopheader.hbs
@@ -1,4 +1,4 @@
-<div class="card m-1">
+<div class="card m-1 mb-5">
     <header class="d-flex  justify-content-center py-3 mb-2 ">
         {{#with navigation}}
 
