--- a/src/container/shopcart.hbs
+++ b/src/container/shopcart.hbs
@@ -1,5 +1,5 @@
 <body>
-    <header class="pt-5 pb-5">
+    <header class=" pb-4">
         {{#with header}}
         <div class="row">
             <h1 class="col-9">{{title}}</h1>
@@ -83,5 +83,5 @@
             </div>
         </div>
     </section>
-    <hr class="mt-5 mb-5">
+
 </body>
