--- a/src/container/shopprofile.hbs
+++ b/src/container/shopprofile.hbs
@@ -1,5 +1,5 @@
 <body>
-    <header class="mt-5">
+    <header>
         <h1>{{header}}</h1>
 
     </header>
@@ -244,5 +244,5 @@
         </div>
         {{/with}}
     </section>
-    <hr class="mt-5 mb-5">
+
 </body>
