--- a/src/component/shopfooter.hbs
+++ b/src/component/shopfooter.hbs
@@ -1,4 +1,6 @@
+<hr class="mt-5 mb-5">
 <section>
+
     <div class="row gy-2 gx-2">
         <div class="col-2 ms-3 ">
             {{#each footer.[0]}}
