add shopcatalog and component catalogItem

--- a/src/container/shopnews.hbs
+++ b/src/container/shopnews.hbs
@@ -1,5 +1,5 @@
 <body class="p-2">
-    {{> breadcrump}}
+    {{> breadcrumb}}
     <section>
         <div class="row ">
             {{#with newsData}}
