--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -1,5 +1,5 @@
 <body class="p-2">
-    {{> breadcrump}}
+    {{> breadcrumb}}
     <section class="mt-4 mb-5  ">
         {{#with productData}}
         <div class="row">
