upd page to bootstrap

--- a/src/component/nav.hbs
+++ b/src/component/nav.hbs
@@ -1,6 +1,23 @@
 <nav class="p-2">
-    {{> link text='Skills' href="/skills" line=true }}
+    {{!-- {{> link text='Skills' href="/skills" line=true }}
     {{> link text='Summary' href="/summary" line=true }}
     {{> link text='Education' href="/educ" line=true }}
-    {{> link text='Work History' href="/work" line=true noLine=true }}
+    {{> link text='Work History' href="/work" line=true noLine=true }} --}}
+    <div class="col-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+
+
+
+                <li class="breadcrumb-item"><a href="/skills">Skills</a></li>
+                <li class="breadcrumb-item"><a href="/summary">Summary</a></li>
+                <li class="breadcrumb-item"><a href="/educ">Education</a></li>
+                <li class="breadcrumb-item"><a href="/work">Work History</a></li>
+
+
+
+
+            </ol>
+        </nav>
+    </div>
 </nav>
